# logos

./: .gitignore  CLAUDE.md  Contributing.md  Debuggers-plan.md  EXPLORATION_SUMMARY.md  HDR_IMPLEMENTATION_GUIDE.md  HDR_PROBLEM_MARKERS_EXPLORATION.md  LICENSE  MIGRATION_PLAN.md  README.md  Tier3-AdvancedIntelligence-Plan.md  VS_CODE_COMPARISON.md  eslint.config.mts  index.html  llms-full.txt  package-lock.json  package.json  theme.css  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  debugger_feature.md  docs_improvement.md  feature_request.md  intelligence_feature.md
.github/workflows/: Check.yml  Release.yml  UpdateVscodeVendor.yml  claude-code-review.yml  claude.yml  download-lsp.yml
coverage/: coverage-final.json  index.html  lcov.info
coverage/lcov-report/: index.html
dist-electron/: main.js  preload.js
docs/: AEFANYL_ENGINE_PLAN.md  EXTENSION_HOST_TESTING_GUIDE.md  LOCAL_BUILD.md  SMART_MODE_COMPLETION_REPORT.md  Sentry_Test.md  plugin-system-design.md
docs/design/: mode-switching.md  phase2-smart-mode.md
electron/: extension-host.ts  main.ts  preload.ts
logos-lang/crates/logos-index/: Cargo.toml
logos-lang/crates/logos-index/src/: adapter.rs  c_adapter.rs  cpp_adapter.rs  go_adapter.rs  indexer.rs  java_adapter.rs  lib.rs  python_adapter.rs  rust_adapter.rs  symbol_table.rs
scripts/: build-local.cmd  build-local.sh  download-lsp-servers.mts  gen-inno-version.cjs  update-docs.sh
src/: App.vue  main.ts
tests/: README.md  setup.ts
(+447 files in other folders)
