[package]
name = "logos-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Symbol indexing for Logos language service"

[dependencies]
logos-core.workspace = true
serde.workspace = true
regex = "1.10"
dashmap = "6.0"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3.10"
