[package]
name = "logos-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Symbol indexing for Logos language service"

[dependencies]
logos-core.workspace = true
serde.workspace = true
regex.workspace = true
dashmap = "6.0"
tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-java.workspace = true

[dev-dependencies]
tempfile = "3.10"
